--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -257,12 +257,12 @@ head
               .checkbox
                 label
                   input(type="checkbox" id='star') 
-                  span(class='glyphicon glyphicon-star' style='color:#F2D45C;margin-left:10px;')
+                  span(class='glyphicon glyphicon-star' style='color:#F2D45C;margin-right:10px;')
                   | Книга понравилась
               .checkbox
                 label
                   input(type="checkbox" id='attention') 
-                  span(class='glyphicon glyphicon-exclamation-sign' style='color:rgba(255, 255, 255, 0.65);margin-left:10px;')
+                  span(class='glyphicon glyphicon-exclamation-sign' style='color:rgba(255, 255, 255, 0.65);margin-right:10px;')
                   | Прочитать скорее
               nav
                 ul(class="pager")
