--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -293,11 +293,13 @@ head
               .checkbox
                 label
                   input(type="checkbox") 
-                  span(class='glyphicon glyphicon-star' style='color:#F2D45C;margin-left:10px;')
+                  span(class='glyphicon glyphicon-star' style='color:#F2D45C;margin-right:10px;')
+                  | Фильм понравился
               .checkbox
                 label
                   input(type="checkbox") 
-                  span(class='glyphicon glyphicon-exclamation-sign' style='color:rgba(255, 255, 255, 0.65);margin-left:10px;')
+                  span(class='glyphicon glyphicon-exclamation-sign' style='color:rgba(255, 255, 255, 0.65);margin-right:10px;')
+                  | Посмотреть скорее
               nav
                 ul(class="pager")
                   li(class="previous")
