--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -189,11 +189,11 @@ head
       }
       .alreadyb{
       color:rgba(0, 0, 0, 0.27);
-      opacity:0.3;
+      -moz-opacity:0.3;
       }
       .alreadym{
       color:rgba(255, 255, 255, 0.3);
-      opacity:0.3;
+      -moz-opacity:0.3;
       }
       .leftPaddingExtended{
         padding-left:30px;
