--- a/views/emptyindexreg.jade
+++ b/views/emptyindexreg.jade
@@ -191,11 +191,11 @@ head
       }
       .alreadyb{
       color:rgba(0, 0, 0, 0.27);
-      opacity:0.3
+      -moz-opacity:0.3;
       }
       .alreadym{
       color:rgba(255, 255, 255, 0.21);
-      opacity:0.2;
+      -moz-opacity:0.2;
       }
       .leftPaddingExtended{
         padding-left:30px;
