--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -242,7 +242,7 @@ head
           .row
             .col-xs-12(style='text-align:center;')
               h1(style='font-family:high;font-size:200px;font-weight:bold;color:white;') #{newbooks} 
-               span(style='color:rgba(0, 0, 0, 0.15);opacity:0.2;') | #{readbooks}
+               span(class='alreadyb') | #{readbooks}
               button(class='btn btn-default addbookbutton' style='border-radius:30px;margin-bottom:20px;border:0px;color:white;background-color:rgba(255, 255, 255, 0.38);' type='button') Добавить книгу
           .row.adding(id='addbook' style='display:none;padding-top:20px;')
             .col-xs-12
