--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -315,12 +315,16 @@ head
           $('#nav').fadeIn();
           });
       $('#showmovies').click(function(){
+         $('#booksrow').fadeOut();
          $('#maincont').css('background-color','#CA5B52');
+         $('#moviesrow').fadeIn();
          $('.activebutton').removeClass('activebutton');
          $('#showmovies').addClass('activebutton');
         });
       $('#showbooks').click(function(){
+         $('#moviesrow').fadeOut();
          $('#maincont').css('background-color','#52CA8F');
+         $('#booksrow').fadeIn();
          $('.activebutton').removeClass('activebutton');
          $('#showbooks').addClass('activebutton');
         });
