--- a/views/emptymindexreg.jade
+++ b/views/emptymindexreg.jade
@@ -302,12 +302,16 @@ head
           $('#nav').fadeIn();
           });
       $('#showmovies').click(function(){
-         $('#maincont').css('background-color','#D84A3F');
+         $('#booksrow').fadeOut();
+         $('#maincont').css('background-color','#CA5B52');
+         $('#moviesrow').fadeIn();
          $('.activebutton').removeClass('activebutton');
          $('#showmovies').addClass('activebutton');
         });
       $('#showbooks').click(function(){
+         $('#moviesrow').fadeOut();
          $('#maincont').css('background-color','#52CA8F');
+         $('#booksrow').fadeIn();
          $('.activebutton').removeClass('activebutton');
          $('#showbooks').addClass('activebutton');
         });
