--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -204,14 +204,18 @@ head
       a(href='http://m.peopleandbooks.com/about') О проекте
       a(href="http://peopleandbooks.com/logout") Выйти
     .container( id='maincont' style='background-color:#52CA8F;overflow:auto;height:100%;padding-left:20px;padding-right:0px;padding-bottom:74px;')
-      .row
-        .col-xs-12(style='text-align:center;')
-          h1(id='newbooks' style='font-family:high;font-size:100px;font-weight:bold;color:white;padding-right:20px;') #{newbooks} 
-            span(id='readbooks' style='color:rgba(0, 0, 0, 0.15);') | #{readbooks}
       #booksrow.row
         #bookinsert.col-xs-12
+          .row
+            .col-xs-12(style='text-align:center;')
+              h1(id='newbooks' style='font-family:high;font-size:100px;font-weight:bold;color:white;padding-right:20px;') #{newbooks} 
+                span(id='readbooks' class='alreadyb') | #{readbooks}
       #moviesrow.row(style='display:none;')
         #bookinsert.col-xs-12
+          .row
+            .col-xs-12(style='text-align:center;')
+              h1(id='newbooks' style='font-family:high;font-size:100px;font-weight:bold;color:white;padding-right:20px;') #{newmovies} 
+                span(id='readbooks' class='alreadym') | #{seenmovies}
     footer(class='footer')
       .container
         .row(id='addbook' style='display:none;padding-top:20px;background-color:#378961;')
