--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -217,6 +217,9 @@ head
       #moviewinsert {
         padding-left:40px;
       }
+      label {
+        color:white;
+      }
   body
     script.
       if(screen.width < 414){
