--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -240,12 +240,12 @@ head
             .checkbox
               label
                 input(type="checkbox" checked='' id='star' value='0') 
-                span(class='glyphicon glyphicon-star' style='color:#F2D45C;margin-left:10px;')
+                span(class='glyphicon glyphicon-star' style='color:#F2D45C;margin-right:10px;')
                 | Книга понравилась
             .checkbox
               label
                 input(type="checkbox" checked='' id='attention' value='0') 
-                span(class='glyphicon glyphicon-exclamation-sign' style='color:rgba(255, 255, 255, 0.65);margin-left:10px;')
+                span(class='glyphicon glyphicon-exclamation-sign' style='color:rgba(255, 255, 255, 0.65);margin-right:10px;')
                 | Прочитать скорее
             nav
               ul(class="pager")
@@ -268,12 +268,12 @@ head
             .checkbox
               label
                 input(type="checkbox" value='1') 
-                span(class='glyphicon glyphicon-star' style='color:#F2D45C;margin-left:10px;')
+                span(class='glyphicon glyphicon-star' style='color:#F2D45C;margin-right:10px;')
                 | Фильм понравился
             .checkbox
               label
                 input(type="checkbox" value='1') 
-                span(class='glyphicon glyphicon-exclamation-sign' style='color:rgba(255, 255, 255, 0.65);margin-left:10px;')
+                span(class='glyphicon glyphicon-exclamation-sign' style='color:rgba(255, 255, 255, 0.65);margin-right:10px;')
                 | Посмотреть скорее
             nav
               ul(class="pager")
