--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -346,6 +346,7 @@ head
           {
             $('#addmovie').slideToggle();
           }
+          $('.modpanel').css('display','none');
           $('#addbook').slideToggle();
           });
         $('.addmoviebutton').click(function(){
@@ -353,6 +354,7 @@ head
           {
             $('#addbook').slideToggle();
           }
+          $('.modpanel').css('display','none');
           $('#addmovie').slideToggle();
           });
         var counter =0;
