--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -499,7 +499,7 @@ head
         console.log('TROUBLE === 1');
         switch (parsed.mtext){
         case('db'):
-        alert('Проблема с базой данных, повторите позднее')ж
+        alert('Проблема с базой данных, повторите позднее');
         allowmod = 1;
         break;
         }}
