--- a/views/emptyindexreg.jade
+++ b/views/emptyindexreg.jade
@@ -444,7 +444,7 @@ head
         {
          bookclass='alreadyb';
         }
-        var insert = "<h4 class='"+bookclass+"' id='heading"+bid+"' style='margin-left:40px;'>"+booktitle;
+        var popinsert = "<div class='row' onclick='openmodpanel("+bid+")' id='book"+bid+"'><div class='col-xs-12'><h4 id='heading"+bid+"' class='"+bookclass+"' style='margin-left:40px;'>"+booktitle;
         if(star===1&&newbook===0){
           insert+="<span style='color:#F2D45C;margin-left:10px;' class='glyphicon glyphicon-star'></span>";
         }
