--- a/views/index.jade
+++ b/views/index.jade
@@ -347,7 +347,7 @@ head
         //$('#message').append("<h5 style='color:#fc454e;'>incorrect email</h5>");
         alert('Incorrect email');
         errcount++;
-        return:
+        return;
         }
         console.log('submitting now');
         //$("#regform").submit();
