--- a/views/emptyindexreg.jade
+++ b/views/emptyindexreg.jade
@@ -440,7 +440,7 @@ head
           $("#checkbox").prop("star", false);
           $("#checkbox").prop("attention", false);
         var bookclass = 'yet';
-        if(newbook!='on')
+        if(newbook=0)
         {
          bookclass='alreadyb';
         }
