--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -243,7 +243,7 @@ head
           .row
             .col-xs-12(style='text-align:center;')
               h1(style='font-family:high;font-size:200px;font-weight:bold;color:white;') #{newbooks} 
-               span(class='alreadyb') | #{readbooks}
+               span(class='alreadyb' id='readbooks') | #{readbooks}
               button(class='btn btn-default addbookbutton' style='border-radius:30px;margin-bottom:20px;border:0px;color:white;background-color:rgba(255, 255, 255, 0.38);' type='button') Добавить книгу
           .row.adding(id='addbook' style='display:none;padding-top:20px;')
             .col-xs-12
@@ -441,15 +441,15 @@ head
           $("#checkbox").prop("star", false);
           $("#checkbox").prop("attention", false);
         var bookclass = 'yet';
-        if(newbook!='on')
+        if(newbook===0)
         {
-         bookclass='alreadyb'
+         bookclass='alreadyb';
         }
         var insert = "<h4 class='"+bookclass+"' style='margin-left:40px;'>"+booktitle;
-        if(star!='on'&&newbook!='on'){
+        if(star===1&&newbook===0){
           insert+="<span style='color:#F2D45C;margin-left:10px;' class='glyphicon glyphicon-star'></span>";
         }
-        if(attention!='on'&&newbook==='on'){
+        if(attention===1&&newbook===1){
           insert+="<span style='color:rgba(255, 255, 255, 0.65);margin-left:10px;' class='glyphicon glyphicon-exclamation-sign'></span>";
         }
         $('#welcome').fadeOut();
