--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -346,6 +346,7 @@ head
           {
             $('#addmovie').slideToggle();
           }
+          console.log('modpanel open');
           $('.modpanel').css('display','none');
           $('#addbook').slideToggle();
           });
@@ -354,6 +355,7 @@ head
           {
             $('#addbook').slideToggle();
           }
+          console.log('modpanel open');
           $('.modpanel').css('display','none');
           $('#addmovie').slideToggle();
           });
