--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -340,7 +340,7 @@ head
         function openmodpanel(bid) {
           console.log('modpanel open');
           $('.modpanel').css('display','none');
-         eval("$('#modbookrow"+bid+"').slideToggle();");
+         eval("$('#modbook"+bid+"').slideToggle();");
         }
         $('.addbookbutton').click(function(){
           if($('#addmovie').css('display') === 'block')
