--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -342,8 +342,8 @@ head
           if(modcount===0)
           {console.log('modpanel open');
                     $('.modpanel').css('display','none');
-                   eval("$('#modbook"+bid+"').slideToggle();");}
-                   modcount++;
+                   eval("$('#modbook"+bid+"').slideToggle();");
+                   modcount++;}
           else {
             $('.modpanel').css('display','none');
             modcount--;
