--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -337,16 +337,14 @@ head
                popinsert+="<button class='btn btn-danger' onclick=(modify(1,"+element.bid+")) type='button'>Удалить</button></div</div>";
                $('#bookinsert').prepend(popinsert);
             });
-        var modcount = 0;
         function openmodpanel(bid) {
-          if(modcount===0)
+          if(eval("$('#modbook"+bid+"').css('display');")==='none')
           {console.log('modpanel open');
                     $('.modpanel').css('display','none');
                    eval("$('#modbook"+bid+"').slideToggle();");
-                   modcount++;}
+                   }
           else {
             eval("$('#modbook"+bid+"').slideToggle();");
-            modcount--;
           }
         }
         $('.addbookbutton').click(function(){
