--- a/views/emptyindexreg.jade
+++ b/views/emptyindexreg.jade
@@ -266,7 +266,7 @@ head
             .row
               .col-xs-12(style='text-align:center;')
                 h1(style='font-family:high;font-size:200px;font-weight:bold;color:white;') 0 
-                 span(class='alreadyb') | 0
+                 span(class='alreadyb' id='readbooks') | 0
                 button(class='btn btn-default addbookbutton' style='border-radius:30px;margin-bottom:20px;border:0px;color:white;background-color:rgba(255, 255, 255, 0.38);' type='button') Добавить книгу
             .row.adding(id='addbook' style='display:none;padding-top:20px;')
               .col-xs-12
@@ -440,7 +440,7 @@ head
           $("#checkbox").prop("star", false);
           $("#checkbox").prop("attention", false);
         var bookclass = 'yet';
-        if(newbook=0)
+        if(newbook===0)
         {
          bookclass='alreadyb';
         }
@@ -466,9 +466,9 @@ head
         }
         insert+="</h4></div></div><div class='row modpanel' id='modbook"+bid+"' style='text-align:center;display:none;background-color:#333;'><div class='col-xs-12'>";
         if(newbook){
-         insert+="<button id='readbutton"+bid+"' class='btn btn-primary' onclick=(modify(0,"+bid+")) type='button'>Прочитана</button>";
+         insert+="<button id='readbutton"+bid+"' class='btn btn-primary' onclick='modify(0,"+bid+")' type='button'>Прочитана</button>";
         }
-        insert+="<button class='btn btn-danger' onclick=(modify(1,"+bid+")) type='button'>Удалить</button></div</div>";
+        insert+="<button class='btn btn-danger' onclick='modify(1,"+bid+")' type='button'>Удалить</button></div</div>";
         //$('#bookinsert').prepend(popinsert);
         $(insert).prependTo('#bookinsert').hide().slideDown();
         allowsubmit=1;
