--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -214,7 +214,7 @@ head
       label {
         color:white;
       }
-      .btn{
+      btn{
         margin:10px;
         border-radius:30px;
       }
@@ -323,18 +323,18 @@ head
                {
                 popbookclass='alreadyb';
                }
-               var popinsert = "<div class='row' onclick='openmodpanel("+element.bid+")' id='book"+element.bid+"'><div class='col-xs-12'><h4 id='heading"+element.bid+"' class='"+popbookclass+"' style='margin-left:40px;'>"+element.booktitle;
+               var popinsert = "<class='row' onclick='openmodpanel("+element.bid+")' id='book"+element.bid+"'><div class='col-xs-12'><h4 class='"+popbookclass+"'>"+element.booktitle;
                if(element.star===1&&element.newbook===0){
                  popinsert+="<span style='color:#F2D45C;margin-left:10px;' class='glyphicon glyphicon-star'></span>";
                }
                if(element.attention===1&&element.newbook===1){
                  popinsert+="<span style='color:rgba(255, 255, 255, 0.65);margin-left:10px;' class='glyphicon glyphicon-exclamation-sign'></span>";
                }
-               popinsert+="</h4></div></div><div class='row modpanel' id='modbook"+element.bid+"' style='text-align:center;display:none;background-color:#333;'><div class='col-xs-12'>";
+               popinsert+="</h4></div></div><div class='row modpanel' id='modbook"+element.bid+"' style='text-alig:center;display:none;background-color:#333;'><div class='col-xs-12'>";
                if(newbook){
-                popinsert+="<button id='readbutton"+element.bid+"' class='btn btn-primary' onclick=(modify(0,"+element.bid+")) type='button'>Прочитана</button>";
+                popinsert+="<button class='btn btn-primary' type='button'>Прочитана</button>";
                }
-               popinsert+="<button class='btn btn-danger' onclick=(modify(1,"+element.bid+")) type='button'>Удалить</button></div</div>";
+               popinsert+="<button class='btn btn-danger' type='button'>Удалить</button></div</div>";
                $('#bookinsert').prepend(popinsert);
             });
         function openmodpanel(bid) {
@@ -346,7 +346,6 @@ head
           {
             $('#addmovie').slideToggle();
           }
-          $('.modpanel').css('display','none');
           $('#addbook').slideToggle();
           });
         $('.addmoviebutton').click(function(){
@@ -354,7 +353,6 @@ head
           {
             $('#addbook').slideToggle();
           }
-          $('.modpanel').css('display','none');
           $('#addmovie').slideToggle();
           });
         var counter =0;
@@ -441,16 +439,16 @@ head
           $("#checkbox").prop("star", false);
           $("#checkbox").prop("attention", false);
         var bookclass = 'yet';
-        if(newbook===0)
+        if(newbook!='on')
         {
-         bookclass='alreadyb';
+         bookclass='alreadyb'
         }
-        var insert = "<h4 class='"+bookclass+"' style='margin-left:40px;'>"+booktitle;
-        if(star===1&&newbook===0){
-          insert+="<span style='color:#F2D45C;margin-right:10px;' class='glyphicon glyphicon-star'></span>";
+        var insert = "<h4 class='"+bookclass+"'' style='color:white;'>"+booktitle;
+        if(star!='on'&&newbook!='on'){
+          insert+="<span style='color:#F2D45C;margin-left:10px;' class='glyphicon glyphicon-star'></span>";
         }
-        if(attention===1&&newbook===1){
-          insert+="<span style='color:rgba(255, 255, 255, 0.65);margin-right:10px;' class='glyphicon glyphicon-exclamation-sign'></span>";
+        if(attention!='on'&&newbook==='on'){
+          insert+="<span style='color:rgba(255, 255, 255, 0.65);margin-left:10px;' class='glyphicon glyphicon-exclamation-sign'></span>";
         }
         $('#welcome').fadeOut();
         $('#booksrow').slideToggle();
@@ -476,56 +474,10 @@ head
         request.setRequestHeader('X-Requested-With', 'XMLHttpRequest');  // Tells server that this call is made for ajax purposes.
         request.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
         //Most libraries like jQuery/Prototype/Dojo do this
-        console.log("author="+author+"&booktitle="+booktitle+"&star="+star+"&attention="+attention+"&uid="+uid+"&newbook="+newbook);
+        console.log("author="+author+"&booktitle="+booktitle+"&star="+star+"&attention="+attention);
         request.send("author="+author+"&booktitle="+booktitle+"&star="+star+"&attention="+attention+"&uid="+uid+"&newbook="+newbook);
         }
         $('#booksubmitbutton').click(booksubmit);
-        // modify function
-        var allowmod = 1;
-        function modify(rem,bid) {
-         if (!allowmod) {
-          return;
-         }
-        allowmod = 0;
-        request = new XMLHttpRequest();
-        request.onreadystatechange = function () {
-        var DONE = this.DONE || 4;
-        if (this.readyState === DONE){
-        var index;
-        parsed = JSON.parse(request.responseText);
-        console.log(parsed);
-        if(parsed.trouble === 1)
-        {
-        console.log('TROUBLE === 1');
-        switch (parsed.mtext){
-        case('db'):
-        alert('Проблема с базой данных, повторите позднее');
-        allowmod = 1;
-        break;
-        }}
-        else {
-         if(rem) {
-           if (eval("$('#modbook"+bid+"').css('display')") === 'block' )
-         {eval("$('#modbook"+bid+"').slideToggle('400',function(){$('#modbook"+bid+"').remove();})");}
-         
-         eval("$('#book"+bid+"').fadeOut('400',function(){$('#book"+bid+"').remove();});");
-         }
-         else {
-          if (eval("$('#modbook"+bid+"').css('display')") === 'block' )
-         {eval("$('#modbook"+bid+"').slideToggle();");}
-           eval("$('#readbutton"+bid+"').remove();");
-           eval("$('#heading"+bid+"').removeClass('yet').addClass('alreadyb');");
-         }
-        }
-        }
-        };
-        request.open('POST', '/modbook', true);
-        request.setRequestHeader('X-Requested-With', 'XMLHttpRequest');  // Tells server that this call is made for ajax purposes.
-        request.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
-        //Most libraries like jQuery/Prototype/Dojo do this
-        console.log("rem="+rem+"&uid=#{uid}&bid="+bid);
-        request.send("rem="+rem+"&uid=#{uid}&bid="+bid);
-        }
       
         
       
