--- a/views/emptyindexreg.jade
+++ b/views/emptyindexreg.jade
@@ -265,8 +265,7 @@ head
           .col-xs-6(id='books' style='background-color:#52CA8F;height:100%;overflow:auto;')
             .row
               .col-xs-12(style='text-align:center;')
-                h1(style='font-family:high;font-size:200px;font-weight:bold;color:white;') 0 
-                 span(class='alreadyb') | 0
+                h1(id='booksfigures' style='font-family:high;font-size:200px;font-weight:bold;color:white;')
                 button(class='btn btn-default addbookbutton' style='border-radius:30px;margin-bottom:20px;border:0px;color:white;background-color:rgba(255, 255, 255, 0.38);' type='button') Добавить книгу
             .row.adding(id='addbook' style='display:none;padding-top:20px;')
               .col-xs-12
@@ -301,7 +300,7 @@ head
           .col-xs-6(id='movies' style='background-color:#CA5B52;height:100%;overflow:auto;')
             .row
               .col-xs-12(style='text-align:center;')
-                h1(style='font-family:high;font-size:200px;font-weight:bold;color:white;') 0 
+                h1(id='moviesfigures' style='font-family:high;font-size:200px;font-weight:bold;color:white;') 0 
                  span(class='alreadym') | 0
                 button(class='btn btn-default addmoviebutton' style='border-radius:30px;margin-bottom:20px;border:0px;background-color:rgba(255, 255, 255, 0.38);color:white;' type='button') Добавить фильм
              .row.adding(id='addmovie' style='display:none;padding-top:20px;')
@@ -337,6 +336,10 @@ head
       script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
       script(async src='/js/bootstrap.min.js')
       script.
+        //books amount indicator
+        var readbooks = 0;
+        var newbooks = 0;
+        $('#booksfigures').text(" "+newbooks+" <span class='alreadyb'> | "+readbooks+"</span>");
         $('#welcomebutton').click(function(){
           $('#welcome').fadeOut();
           $('.container').css({'-webkit-filter':'blur(0px) brightness(1)','-o-filter':'blur(0px) brightness(1)','-moz-filter':'blur(0px) brightness(1)','filter':'blur(0px) brightness(1)'});
@@ -439,7 +442,7 @@ head
           $("#checkbox").prop("star", false);
           $("#checkbox").prop("attention", false);
         var bookclass = 'yet';
-        if(newbook!='on')
+        if(newbook===1)
         {
          bookclass='alreadyb';
         }
@@ -453,15 +456,13 @@ head
         $('#welcome').fadeOut();
         $('#booksrow').slideToggle();
         if(newbook===1)
-        {var newbooks = parseInt($('#newbooks').text());
-              newbooks++;
-              $('#newbooks').text(newbooks);}
+        {newbooks++;
+        $('#booksfigures').empty().text(" "+newbooks+" <span class='alreadyb'> | "+readbooks+"</span>");
+        }
         else {
-          var readbooks = parseInt($('#readbooks').text());
-              console.log(readbooks);
-              readbooks++;
-              console.log(readbooks);
-              $('#readbooks').text(readbooks);
+          readbooks++;
+          $('#booksfigures').text(" "+newbooks+" <span class='alreadyb'> | "+readbooks+"</span>");
+
         }
         insert+="</h4>";
         $(insert).prependTo('#bookinsert').hide().slideDown();
