--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -332,9 +332,9 @@ head
                }
                popinsert+="</h4></div></div><div class='row modpanel' id='modbook"+element.bid+"' style='text-alig:center;display:none;background-color:#333;'><div class='col-xs-12'>";
                if(newbook){
-                popinsert+="<button class='btn btn-primary' type='button'>Прочитана</button>";
+                popinsert+="<button class='btn btn-primary' onclick='modify(0,"+element.bid+")' type='button'>Прочитана</button>";
                }
-               popinsert+="<button class='btn btn-danger' type='button'>Удалить</button></div</div>";
+               popinsert+="<button class='btn btn-danger' onclick='modify(1,"+element.bid+")' type='button'>Удалить</button></div</div>";
                $('#bookinsert').prepend(popinsert);
             });
         function openmodpanel(bid) {
@@ -478,6 +478,51 @@ head
         request.send("author="+author+"&booktitle="+booktitle+"&star="+star+"&attention="+attention+"&uid="+uid+"&newbook="+newbook);
         }
         $('#booksubmitbutton').click(booksubmit);
+        // modify function
+        var allowmod = 1;
+        function modify(rem,bid) {
+         if (!allowmod) {
+          return;
+         }
+        allowmod = 0;
+        request = new XMLHttpRequest();
+        request.onreadystatechange = function () {
+        var DONE = this.DONE || 4;
+        if (this.readyState === DONE){
+        var index;
+        parsed = JSON.parse(request.responseText);
+        console.log(parsed);
+        if(parsed.trouble === 1)
+        {
+        console.log('TROUBLE === 1');
+        switch (parsed.mtext){
+        case('db'):
+        alert('Проблема с базой данных, повторите позднее');
+        allowmod = 1;
+        break;
+        }}
+        else {
+         if(rem) {
+           if (eval("$('#modbook"+bid+"').css('display')") === 'block' )
+         {eval("$('#modbook"+bid+"').slideToggle('400',function(){$('#modbook"+bid+"').remove();})");}
+         
+         eval("$('#book"+bid+"').fadeOut('400',function(){$('#book"+bid+"').remove();});");
+         }
+         else {
+          if (eval("$('#modbook"+bid+"').css('display')") === 'block' )
+         {eval("$('#modbook"+bid+"').slideToggle();");}
+           eval("$('#readbutton"+bid+"').remove();");
+           eval("$('#heading"+bid+"').removeClass('yet').addClass('alreadyb');");
+         }
+        }
+        }
+        };
+        request.open('POST', '/modbook', true);
+        request.setRequestHeader('X-Requested-With', 'XMLHttpRequest');  // Tells server that this call is made for ajax purposes.
+        request.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+        //Most libraries like jQuery/Prototype/Dojo do this
+        request.send("rem="+rem+"&uid=#{uid}&bid="+bid);
+        }
       
         
       
