--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -214,7 +214,7 @@ head
       label {
         color:white;
       }
-      btn{
+      .modpanel .btn{
         margin:10px;
         border-radius:30px;
       }
